test_suite/tests/ui/identifier/both.stderr
error: #[serde(field_identifier)] and #[serde(variant_identifier)] cannot both be set
 --> $DIR/both.rs:5:9
  |
5 | #[serde(field_identifier, variant_identifier)]
  |         ^^^^^^^^^^^^^^^^

error: #[serde(field_identifier)] and #[serde(variant_identifier)] cannot both be set
 --> $DIR/both.rs:5:27
  |
5 | #[serde(field_identifier, variant_identifier)]
  |                           ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

